# adk-aeo-20

./: .gitignore  .pre-commit-config.yaml  .semgrep.yaml  README.md  pyproject.toml  setup_guide.md
.agents/: AGENTS.md  CONTEXT.md
.agents/scripts/: validate_tool_call.py
.agents/skills/automation-roi-parameters/: SKILL.md
.agents/skills/automation-roi-parameters/resources/: roi_constants.json
.agents/skills/automation-roi-parameters/scripts/: calculate_roi.py
.agents/skills/google-doc-manager/: SKILL.md
.agents/skills/hidden-schema-compliance-auditor/: SKILL.md
.agents/skills/manage-aeo-custom-blocks/: SKILL.md
.agents/skills/manage-aeo-custom-blocks/examples/: after_insert.html  before_insert.html
.agents/skills/manage-aeo-custom-blocks/references/: native_blocks.md
.agents/skills/manage-aeo-custom-blocks/scripts/: deploy.py
.agents/skills/seo-auditor/: SKILL.md
.agents/skills/seo-auditor/references/: seo_rulebook.md
.agents/skills/serp-feature-and-intent-auditor/: SKILL.md
.semgrep/: rules.yaml
app/: agent.py  config.py  create_staging_page.py  deploy_blocks.py  main.py  mcp_google_docs.py
app/custom_blocks/: aeo-custom-blocks.php  package-lock.json  package.json
app/custom_blocks/references/: native_blocks.md
app/templates/: audit_template.html
app/tools/: __init__.py  audit_hidden_schema.py  audit_rules.py  geo_utils.py  google_auth_helper.py  google_docs_native.py  seo_tools.py  site_mapper.py  wp_client.py
tests/unit/: test_google_docs.py  test_hidden_schema.py  test_secure_tools.py  test_seo_rules.py  test_site_mapping.py
(+54 files in other folders)
