[project]
name = "gutenberg-aeo-copilot"
version = "0.1.0"
description = "Secure ADK 2.0 gutenberg-aeo-copilot Agent"
dependencies = [
    "google-adk>=2.0.0",
    "pytest>=7.0.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "beautifulsoup4>=4.12.0",
    "jinja2>=3.1.0",
    "mcp>=1.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0"
]

